# linux_dev_2020

03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile  fun.c  outlib.h  prog.c
05_Environmental/: CMakeLists.txt  Windowpcre.c
06_Debugging/: double_free.c
07_DebuggingTracing/: Makefile  lib.c
08_TestingCoverage/: CMakeLists.txt  tests.c
08_TestingCoverage/src/: buf.c  buf.h
09_I18nL10n/: guess.c  guess.pot
10_Documenting/: Makefile  doxyconf.txt  guess.c  guess.po  guess.pot
10_Documenting/doc/html/: files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  guess_8c.html  guess_8c__incl.map  guess_8c__incl.md5  index.html
10_Documenting/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js
10_Documenting/man/: guess
11_Toolkits/: Makefile  count_words.c
12_ScriptingText/: Makefile  Makefile.am  configure.ac  count_words.c  count_words.h
13_PatchInstall/: Makefile  Makefile.am  configure.ac  guess.c  guess.po
